--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,9 @@
 [General]
-network = myrcproject.RcCar5GNetwork
-sim-time-limit = 60s
+network = tp7.myrcproject.RcCar5GNetwork
+sim-time-limit = 3600s
+
+# Run in real time for emulation
+scheduler-class = "inet::RealTimeScheduler"
 
 # --- Network Configurator ---
 # Assigns IP addresses to all interfaces
@@ -43,7 +46,10 @@ sim-time-limit = 60s
 
 # 1. Controller Configuration (Sender)
 # We use UdpBasicApp to send packets. We need one app per car to address them individually.
-*.controller.numApps = 3
+*.controller.numApps = 4
+
+*.controller.app[3].typename = "UdpEchoApp"
+*.controller.app[3].localPort = 5000
 
 # App 0 -> Car 0
 *.controller.app[0].typename = "UdpBasicApp"
@@ -77,3 +83,9 @@ sim-time-limit = 60s
 *.car[*].numApps = 1
 *.car[*].app[0].typename = "UdpEchoApp"
 *.car[*].app[0].localPort = 1000
+
+*.controller.numEthInterfaces = 1
+*.controller.eth[0].typename = "ExtLowerEthernetInterface"
+*.controller.eth[0].device = "veth-sim"
+*.controller.eth[0].namespace = "host0"     # because veth-sim is inside netns host0
+*.controller.eth[0].mtu = 1500B
