final minimal working state
- minimal working state of omnet

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,90 +1,19 @@
 [General]
-network = tp7.myrcproject.RcCar5GNetwork
-sim-time-limit = 3600s
+network = rcprojects.simulations.ExtPingNet
 
-# Run in real time for emulation
-scheduler-class = "inet::RealTimeScheduler"
+# Required for emulation: run simulation in real time
+scheduler-class = "inet::RealTimeScheduler"  
 
-# --- Network Configurator ---
-# Assigns IP addresses to all interfaces
-*.configurator.config = xmldoc("config.xml")
+# Make it easier to keep up with real time (optional but recommended)
+cmdenv-express-mode = true
 
-# --- 5G Core / Network Setup ---
-# Basic Simu5G configuration for the binder and channel
-*.binder.packetSize = 1500
-*.channelControl.carrierFrequency = 3.5GHz
-*.channelControl.pMax = 40dBm
-*.channelControl.alpha = 1.0
-*.channelControl.numChannels = 1
+# Configure ONE Ethernet interface, implemented by ExtLowerEthernetInterface
+*.host1.numEthInterfaces = 1
+*.host1.eth[0].typename = "ExtLowerEthernetInterface" 
+*.host1.eth[0].device = "veth-sim"                     
+*.host1.eth[0].mtu = 1500B
 
-# --- gNodeB Configuration ---
-*.gnb.mobility.initialX = 450m
-*.gnb.mobility.initialY = 300m
-
-# --- UE (Car) Configuration ---
-*.numCars = 3
-*.car[*].macCellId = 1
-*.car[*].masterId = 1
-*.car[*].nrMacCellId = 1
-*.car[*].nrMasterId = 1
-
-# Car Mobility (Simple linear movement)
-*.car[*].mobility.typename = "LinearMobility"
-*.car[*].mobility.speed = 10mps
-*.car[*].mobility.initialY = 400m
-*.car[*].mobility.initialX = uniform(500m, 700m)
-*.car[*].mobility.constraintAreaMinX = 0m
-*.car[*].mobility.constraintAreaMinY = 0m
-*.car[*].mobility.constraintAreaMaxX = 1000m
-*.car[*].mobility.constraintAreaMaxY = 1000m
-*.car[*].mobility.constraintAreaMinZ = 0m
-*.car[*].mobility.constraintAreaMaxZ = 0m
-
-# --- Application Setup ---
-# Scenario: Controller sends "JSON files" to Cars, Cars echo them back.
-# We simulate the JSON file as a UDP packet of a specific size (e.g., 1KB).
-
-# 1. Controller Configuration (Sender)
-# We use UdpBasicApp to send packets. We need one app per car to address them individually.
-*.controller.numApps = 4
-
-*.controller.app[3].typename = "UdpEchoApp"
-*.controller.app[3].localPort = 5000
-
-# App 0 -> Car 0
-*.controller.app[0].typename = "UdpBasicApp"
-*.controller.app[0].destAddresses = "car[0]"
-*.controller.app[0].destPort = 1000
-*.controller.app[0].messageLength = 1024B  # Simulating a 1KB JSON file
-*.controller.app[0].sendInterval = 1s      # Send every second
-*.controller.app[0].startTime = 2s
-*.controller.app[0].packetName = "JsonData_Car0"
-
-# App 1 -> Car 1
-*.controller.app[1].typename = "UdpBasicApp"
-*.controller.app[1].destAddresses = "car[1]"
-*.controller.app[1].destPort = 1000
-*.controller.app[1].messageLength = 1024B
-*.controller.app[1].sendInterval = 1s
-*.controller.app[1].startTime = 2.1s
-*.controller.app[1].packetName = "JsonData_Car1"
-
-# App 2 -> Car 2
-*.controller.app[2].typename = "UdpBasicApp"
-*.controller.app[2].destAddresses = "car[2]"
-*.controller.app[2].destPort = 1000
-*.controller.app[2].messageLength = 1024B
-*.controller.app[2].sendInterval = 1s
-*.controller.app[2].startTime = 2.2s
-*.controller.app[2].packetName = "JsonData_Car2"
-
-# 2. Car Configuration (Receiver/Echoer)
-# We use UdpEchoApp. It receives packets and sends them back to the sender.
-*.car[*].numApps = 1
-*.car[*].app[0].typename = "UdpEchoApp"
-*.car[*].app[0].localPort = 1000
-
-*.controller.numEthInterfaces = 1
-*.controller.eth[0].typename = "ExtLowerEthernetInterface"
-*.controller.eth[0].device = "veth-sim"
-*.controller.eth[0].mtu = 1500B
+# --- UDP echo server on the simulated host ---
+*.host1.numApps = 1
+*.host1.app[0].typename = "UdpEchoApp"
+*.host1.app[0].localPort = 9999
