--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,19 +1,24 @@
 [General]
-network = rcprojects.simulations.ExtPingNet
+network = rcproject.simulations.ExtPingNet
 
 # Required for emulation: run simulation in real time
-scheduler-class = "inet::RealTimeScheduler"  
+scheduler-class = "inet::RealTimeScheduler"  # :contentReference[oaicite:4]{index=4}
 
 # Make it easier to keep up with real time (optional but recommended)
 cmdenv-express-mode = true
 
 # Configure ONE Ethernet interface, implemented by ExtLowerEthernetInterface
 *.host1.numEthInterfaces = 1
-*.host1.eth[0].typename = "ExtLowerEthernetInterface" 
-*.host1.eth[0].device = "veth-sim"                     
+*.host1.eth[0].typename = "ExtLowerEthernetInterface"  # :contentReference[oaicite:5]{index=5}
+*.host1.eth[0].device = "veth-sim"                     # real OS iface name :contentReference[oaicite:6]{index=6}
 *.host1.eth[0].mtu = 1500B
 
 # --- UDP echo server on the simulated host ---
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpEchoApp"
 *.host1.app[0].localPort = 9999
+
+*.host1.fcsMode = "computed"
+
+**.crcMode = "computed"
+**.fcsMode = "computed"
