--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -13,9 +13,9 @@ cmdenv-express-mode = true
 *.host1.eth[0].device = "veth-sim"                     # real OS iface name :contentReference[oaicite:6]{index=6}
 *.host1.eth[0].mtu = 1500B
 
-# --- UDP echo server on the simulated host ---
+# --- TCP echo server on the simulated host ---
 *.host1.numApps = 1
-*.host1.app[0].typename = "UdpEchoApp"
+*.host1.app[0].typename = "TcpEchoApp"
 *.host1.app[0].localPort = 9999
 
 *.host1.fcsMode = "computed"
